<resources>
    <string name="app_name" translatable="false">Story App</string>
    <string name="hello_people">Hi Folks</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email" translatable="false">Email</string>
    <string name="password" translatable="false">Password</string>
    <string name="login" translatable="false">Login</string>
    <string name="don_t_have_account">Don\'t have an account yet?<font color="#C58BF2"> Register</font></string>
    <string name="minimum_password_character">Password must be at least 8 character</string>
    <string name="email_format">Invalid email format</string>
    <string name="already_have_account">Already have an account?<font color="#C58BF2"> Login</font></string>
    <string name="name">Name</string>
    <string name="register" translatable="false">Register</string>
    <string name="register_page">Register Page</string>
    <string name="title_home">Home</string>
    <string name="setting">Setting</string>
    <string name="logout">Logout</string>
    <string name="logout_alert">Are You Sure?</string>
    <string name="logout_message">You are going to logout? Do you like to continue?</string>
    <string name="logout_message_success">Logged out Successfully</string>
    <string name="cancel">Cancel</string>
    <string name="stories" translatable="false">Stories</string>
    <string name="create_story">Create Story</string>
    <string name="login_error" translatable="false">Login Error</string>
    <string name="login_success">Login Success</string>
    <string name="login_error_msg">Login Failed</string>
    <string name="login_success_msg">Login Success</string>
    <string name="register_success_msg">Registration Success</string>
    <string name="registrater_error_msg">Registration Failed</string>
    <string name="select_from">Select Image From</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="description">Write a Description</string>
    <string name="preview_picture">Preview Picture</string>
    <string name="upload">Upload</string>
    <string name="no_permission">Did not get permission</string>
    <string name="please_choose_image">Please Choose an Image</string>
    <string name="desc_cannot_empty">Description Cannot be Empty</string>
    <string name="story_uploaded">Story Uploaded</string>
    <string name="story_failed_uploaded">Story Failed Uploaded</string>
    <string name="date">Date</string>
    <string name="no_data">No Data</string>
    <string name="stories_not_found_error">Stories not found</string>
    <string name="retry">Retry</string>
    <string name="loading_error_message">Unable to fetch stories data</string>
    <string name="please_activate_location_service">Please activate your location service</string>
    <string name="maps" translatable="false">Maps</string>
    <string name="share_location">Share Location</string>
    <string name="location_permission_denied">Location permission not allowed</string>
    <string name="location_permission_denied_action">Change Setting</string>
</resources>