<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.story.AddStoryActivity"
    android:paddingBottom="32dp">

        <ImageView
            android:id="@+id/iv_preview_photo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="32dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/preview_picture"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_image_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_select_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="@dimen/spacing_24"
            android:text="@string/select_from"
            app:layout_constraintTop_toBottomOf="@id/iv_preview_photo"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/camera"
            app:layout_constraintStart_toStartOf="@+id/tv_select_image"
            app:layout_constraintTop_toBottomOf="@+id/tv_select_image" />

        <Button
            android:id="@+id/btn_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/gallery"
            app:layout_constraintBottom_toBottomOf="@+id/btn_camera"
            app:layout_constraintStart_toEndOf="@+id/btn_camera"
            app:layout_constraintTop_toTopOf="@+id/btn_camera" />

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:labelFor="@id/et_description"
            android:text="@string/description"
            app:layout_constraintStart_toStartOf="@+id/tv_select_image"
            app:layout_constraintTop_toBottomOf="@+id/btn_camera" />

        <EditText
            android:id="@+id/et_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="4dp"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_description"
            app:layout_constraintTop_toBottomOf="@+id/tv_description" />

        <Button
            android:id="@+id/btn_upload"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_40"
            android:layout_marginBottom="@dimen/spacing_40"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/upload" />

        <RelativeLayout
            android:id="@+id/rv_loading"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:alpha="0"
            android:background="@color/transparent_purple"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>