<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.storyapp.ui.detail.DetailStoryActivity">

    <TextView
        android:id="@+id/tv_story_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_24"
        android:layout_marginTop="@dimen/spacing_24"
        android:textSize="18sp"
        android:textStyle="bold"
        android:transitionName="username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/tv_story_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:textAllCaps="true"
        android:textSize="12sp"
        android:textStyle="bold"
        android:transitionName="date"
        app:layout_constraintEnd_toEndOf="@+id/tv_story_username"
        app:layout_constraintStart_toStartOf="@+id/tv_story_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_story_username"
        tools:text="@string/date" />

    <ImageView
        android:id="@+id/iv_story_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scaleType="matrix"
        android:transitionName="story_image"
        app:layout_constraintEnd_toEndOf="@id/tv_story_username"
        app:layout_constraintStart_toStartOf="@id/tv_story_username"
        app:layout_constraintTop_toBottomOf="@+id/tv_story_date"
        tools:src="@tools:sample/avatars"
        android:contentDescription="" />

    <TextView
        android:id="@+id/tv_story_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:transitionName="description"
        app:layout_constraintEnd_toEndOf="@id/tv_story_date"
        app:layout_constraintStart_toStartOf="@+id/tv_story_date"
        app:layout_constraintTop_toBottomOf="@+id/iv_story_photo"
        tools:text="@string/description" />


</androidx.constraintlayout.widget.ConstraintLayout>